<resources>
    <string name="app_name">Desk Workout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Desk Workout</string>
    <string name="nav_header_subtitle">stu1801261001@uni-plovdiv.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <!--    <string name="menu_gallery">Gallery</string>-->
    <!--    <string name="menu_slideshow">Slideshow</string>-->
    <string name="menu_feedback">Feedback</string>
    <string name="menu_settings">Settings</string>
    <string name="create_workout">Create workout</string>
    <string name="workout_exercises">Workout exercises</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="main_text_activity_big_text_main">
        This Activity would handle the reminder app\'s functionality.
        \n\nThe notification type for this example was the Big Text Style!</string>
    <string name="workout_routine_title">Workouts</string>
    <string name="workout_routine_subtitle">Start workout or set notification time for your next workout.</string>
    <string name="benefits_of_desk_workout_title">Benefits of desk workout</string>
    <string name="user_statistics">Your workout statistics</string>
    <string name="benefits_of_desk_workout_subtitle">There are many benefits of desk workout.</string>
    <string name="set_notification_time">Set notification time</string>
    <string name="pick_time">Pick time</string>
    <string name="workouts_title">Workouts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workout_name">Workout name:</string>
    <string name="create">Create</string>
    <string name="benefits_text">What are the health benefits of exercise?\n
    \u2022 Help you control your weight.\n
    \u2022  Reduce your risk of heart diseases.\n
    \u2022  Help your body manage blood sugar and insulin levels.\n
    \u2022 Help you quit smoking.\n
    \u2022 Improve your mental health and mood.\n
    \u2022 Help keep your thinking, learning, and judgment skills sharp as you age.</string>
    <string name="workout_description">Workout description</string>
</resources>