<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="bg.deskworkout.deskworkout.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="bg.deskworkout.deskworkout.ui.gallery.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="bg.deskworkout.deskworkout.ui.slideshow.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/createWorkoutFragment"
        android:name="bg.deskworkout.deskworkout.ui.createWorkout.CreateWorkoutFragment"
        android:label="@string/create_workout"
        tools:layout="@layout/fragment_create_workout" />
    <include app:graph="@navigation/nav_workout_exercises"/>
</navigation>