<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".ui.createWorkout.CreateWorkoutFragment">

    <LinearLayout
        android:id="@+id/textLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/exerciseListRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal_32"
            android:layout_marginVertical="@dimen/margin_half"
            android:text="@string/workout_name"
            android:textColor="@color/blue_dark"
            android:textSize="@dimen/title_h5" />

        <EditText
            android:id="@+id/workoutNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal_32"
            android:layout_marginVertical="@dimen/margin_half" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal_32"
            android:layout_marginVertical="@dimen/margin_half"
            android:layout_marginTop="8dp"
            android:text="@string/workout_description"
            android:textColor="@color/blue_dark"
            android:textSize="@dimen/title_h5" />

        <EditText
            android:id="@+id/workoutDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal_32"
            android:layout_marginVertical="@dimen/margin_half" />

        <LinearLayout
            android:id="@+id/createButton"
            style="@style/ButtonBlueOval3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="@dimen/margin_normal_32"
            android:layout_marginVertical="@dimen/margin_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exerciseListRecyclerView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/create" />
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exerciseListRecyclerView"
        android:name="bg.deskworkout.deskworkout.ui.createWorkout.CreateWorkoutFragment"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLayout"
        tools:context=".ui.createWorkout.CreateWorkoutFragment"
        tools:listitem="@layout/list_item_create_workout" />
</androidx.constraintlayout.widget.ConstraintLayout>